# OxideAuth

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  db_schema.sql
src/: error.rs  jwt.rs  main.rs  routes.rs  state.rs  utils.rs
src/handlers/: auth.rs  users.rs
src/middleware/: auth.rs
src/models/: Token.rs  User.rs  mod.rs
