[package]
name = "oxide_auth"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

redis = { version = "1.0", features = ["tokio-comp"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
base64 = "0.22"
rand = "0.8"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2.0"
anyhow = "1.0"
sha256 = "1.6.0"
